multipart video stream previewed using html img tag, ahve to work on caching and looping the sequence

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +8,12 @@
 <body>
     <img id="video-stream" src="" alt="Video Stream">
     <script src="script.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<body>
+    <img id="stream" src="http://127.0.0.1:5000/video" />
 </body>
 </html>
