--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,14 +6,13 @@
     <title>Video Stream</title>
 </head>
 <body>
-    <img id="video-stream" src="" alt="Video Stream">
-    <script src="script.js"></script>
-</body>
-</html> -->
+    <!-- <img id="stream" src="" alt="Video Stream"> -->
+    <!-- <img id="stream" src="http://127.0.0.1:5000/video"> -->
+    <!-- <div id="frames"></div> -->
+    <!-- <img src=""> -->
+    <!-- <script src="script.js"></script> -->
+    <script src="script_old_2.js"></script>
 
-<!DOCTYPE html>
-<html>
-<body>
-    <img id="stream" src="http://127.0.0.1:5000/video" />
 </body>
 </html>
+
