--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,16 @@
 </html> -->
 
 <!DOCTYPE html>
-<html>
-<body>
-    <img id="stream" src="http://127.0.0.1:5000/video" />
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Video Stream</title>
+    </head>
+    <body>
+        <!-- <img id="stream" src="http://127.0.0.1:5000/video" /> -->
+        <Video autoplay muted loop>
+            <source src="http://127.0.0.1:5000/pose" type="">
+        </Video>
+    </body>
 </html>
